# ssh-manager

./: Cargo.toml  LICENSE  README.md
dat/: connections.json
src/: connections.rs  main.rs  menu.rs  navigation.rs
