[package]
name = "ssh-manager"
version = "0.1.0"
authors = ["Nathaniel Graham <nathaniel.graham@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = '0.12.4'
crossterm = "0.17"
tui = { version = "0.10", default-features = false, features = ['crossterm'] }